{
  "home": "Home",
  "share": "Share",
  "about": "About",
  "rate": "Rate Us",
  "languages": "Languages",
  "appLang": "App Language",
  "descLang": "Please select your preferred language",
  "hadithLangDesc": "This override  your choice in the admin console, you can chose a different language by screen",
  "whoops": "Whoops!",
...
  "selectWithMosqueId": "Try: 256, It's the ID of 'Grande Mosquée de Paris'",
  "searchForMosque": "Which Mosque are you looking for ? (ID, Name, City, Postal code...)",
  "searchMosque": "Search for a Mosque",
  "mosqueNameError": "Enter the Mosque name",
  "slugError": "Isn't a valid mosque slug",
  "doYouKnowMosqueId": "Do you know your installation ID or your Mosque ID?",
  "yes": "Yes",
  "no": "No",
  "networkStatus": "Network Status",
  "mosqueNoMore": "No more results",
  "mosqueNoResults": "No results",
  "offline": "Offline",
  "imsak": "Imsak",
...
  "maghrib": "Maghrib",
  "isha": "Isha",
  "afterAdhanHadithTitle": "After adhan Du`aa",
  "afterSalahHadith": "Allahumma Rabba hadhihid-da'wati-ttammati, was-salatil-qa'imati, ati Muhammadanil-wasilata wal-fadhilata, wab'athu maqaman mahmuda nilladhi wa 'adtahu [O Allah, Rubb of this perfect call (Da'wah) and of the established prayer (As-Salat), grant Muhammad the Wasilah and superiority, and raise him up to a praiseworthy position which You have promised him]",
  "alIqama": "Al Iqama",
  "alAdhan": "Al Adan",
  "turnOfPhones": "Please put your phones into Silent Mode",
  "iqamaIn": "Iqama in",
  "alAthkar": "Al-Athkar",
  "azkarList0": "Astaghfiru Allah, Astaghfiru Allah, Astaghfiru Allah Allahumma anta Essalam wa mineka Essalam, tabarakta ya dhal djalali wel ikram Allahumma A`inni `ala dhikrika wa chukrika wa husni `ibadatik",
  "@azkarList0": {
    "description": "أَسْـتَغْفِرُ الله، أَسْـتَغْفِرُ الله، أَسْـتَغْفِرُ الله اللّهُـمَّ أَنْـتَ السَّلامُ ، وَمِـنْكَ السَّلام ، تَبارَكْتَ يا ذا الجَـلالِ وَالإِكْـرام اللَّهُمَّ أَعِنِّي عَلَى ذِكْرِكَ وَشُكْرِكَ وَحُسْنِ عِبَادَتِكَ"
  },
...
  "dhuAlqidah": "Dhu al-Qi'dah",
  "dhuAlhijjah": "Dhu al-Hijja",
  "duaaBetweenSalahAndAdhan": "Anas bin Malik said: The Messenger of Allah ﷺ said: The supplication does not return between the call to prayer and the standing for prayer.",
  "salatKhayrMinaNawm": "Assalatu khayrun mina nawm",
  "salatElEid": "Eid Salah",
  "webView": "Enable Legacy Mode",
  "developersHomeScreen": "Developer's home screen",
  "onlineHome": "Online Home",
  "prayerTimes": "Prayer Times",
  "alerts": "Alert",
  "iqamaaCountDown": "Iqamaa Count Down",
  "afterAdhanHadith": "After Adhan Hadith",
  "afterSalahAzkar": "After Salah Azkar",
  "iqama": "Iqama",
  "randomHadith": "Random Hadith",
  "announcement": "Announcements",
  "jumuaaLive": "Jumuaa [Live Streaming]",
  "showSecondaryScreen": "Use as a secondary screen (For Announcements)",
  "normalScreen": "Use as Main Screen",
  "duaaRemainder": "Duaa Remainder",
  "fajrWakeUp": "Fajr Wake Up",
  "changeLanguage": "Change language",
  "forceScreen": "Force screen",
  "clear": "Clear",
  "changeTheme": "Change Theme",
  "next": "Next",
  "mainScreenOrSecondaryScreen": "Screen location",
  "mainScreenOrSecondaryScreenEXPLINATION": "Do you want to install this screen in the main prayer room (men prayer room) ?",
  "mainScreen": "Main screen",
  "secondaryScreen": "Secondary screen",
  "duaaElEftar": "Duaa El Eftar",
  "announcementOnlyMode": "Announcements mode",
...
  "orientation": "Orientation",
  "selectYourMawaqitTvAppOrientation": "Select your mawaqit tv app orientation",
  "deviceDefault": "Device Default",
  "deviceDefaultBTNDescription": "Mawaqit will auto select the default orientation based on the screen orientation",
  "portrait": "Portrait",
  "portraitBTNDescription": "For vertical orientation recommended for mosque with small space",
  "landscape": "Landscape",
  "landscapeBTNDescription": "For Horizontal orientation. The main layout for mawaqit tv app and recommended one for most mosques",
  "eidMubarak": "Eid Mubarak",
  "takbeerAleidText": "Allahu Akbar, Allahu Akbar, Allahu Akbar, la ilaha illa Allah, Allahu Akbar, Allahu Akbar, wa lillahi al-hamd",
  "settings": "Settings",
  "applicationModes": "Application Mode",
  "ifYouAreFacingAnIssueWithTheAppActivateThis": "If you are facing issues with the app, try to enable this option",
  "hijriAdjustments": "Local Hijri adjustments",
  "hijriAdjustmentsDescription": "Adjust the hijri date locally in your device. This will not affect the online mosque settings",
  "backoffice_default": "Backoffice Defaults",
  "recommended": "Recommended",
  "sabah": "Sabah",
  "randomHadithLanguage": "Random hadith language",
  "en": "English",
  "fr": "French",
  "ar": "Arabic",
  "tr": "Turkish",
  "de": "German",
  "es": "Spanish",
  "pt": "Portuguese",
...
  "processingRequest": "Processing request...",
  "loadingStream": "Loading stream...",
  "rtspUrlHint": "Enter RTSP URL or YouTube link",
  "replaceWorkflowWithStream": "Automatically display the camera stream",
  "replaceAppWorkflowWithCameraStream": "The screen will automatically display the camera stream as soon as the camera starts recording; if it stops, the screen returns to the prayer times display",
  "streamError": "An error occurred while streaming",
  "finish": "Finish",
  "schedulingAlarms":"Scheduling on/off times...",
  "alarmsSucessSchedule":"On/Off triggers scheduled successfully",
  "alarmsScheduleFailure":"Failed to schedule On/Off triggers",
  "prayerTimeNotificationTitle":"Prayer Time Notifications",
  "prayerTimeNotificationDesc":"Get the adhan at prayer times, even when the app is closed",
  "enablePrayerReminders":"Enable Prayer Reminders",
...
