appId: com.mawaqit.androidtv
---
- launchApp
- waitForAnimationToEnd

- tapOn: "Got it"

# Wait for app to be ready
- extendedWaitUntil:
    visible: "السلام عليكم و رحمة الله و بركاته ٫ حللتم أهلا ونزلتم سهلا"
    timeout: 40000

# === ACTIVATE DEVELOPER MODE TO ACCESS AFTER SALAH HADITH ===
# Open the drawer
- pressKey: Remote Dpad Left
- waitForAnimationToEnd

- pressKey: Remote Dpad Down
- pressKey: Remote Dpad Down
- pressKey: Remote Dpad Down
- pressKey: Remote Dpad Down
- pressKey: Remote Dpad Down
- pressKey: Remote Dpad Down
- pressKey: Remote Dpad Down
- pressKey: Remote Dpad Down
- pressKey: Remote Dpad Down
- pressKey: Remote Dpad Down
- pressKey: Remote Dpad Down
- pressKey: Remote Dpad Down
- pressKey: Remote Dpad Down
- pressKey: Remote Dpad Down
- pressKey: Remote Dpad Down


- tapOn: "Iqama"

- assertVisible: ".*Please put your phones into Silent Mode.*"
